# ttyd-rs

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT_GOALS.md  README.md  config.example.toml  justfile  nginx.example.conf  ttyd-rs.example.service
.github/workflows/: ci.yml  release.yml
docs/: CURRENT_STATUS.md  FINAL_REPORT.md  INIT_REPORT.md  M1_REPORT.md  M2_COMPLETION_REPORT.md  M2_TESTING_GUIDE.md  M3_COMPLETION_REPORT.md  M4_COMPLETION_REPORT.md  PROJECT_FINAL_SUMMARY.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  PROTOCOL.md  QUALITY_CHECK_REPORT.md  README.md  REORGANIZATION_SUMMARY.md  SECURITY_IMPROVEMENTS.md  VERIFICATION_REPORT.md
src/: assets.rs  audit.rs  auth.rs  config.rs  main.rs  protocol.rs  pty.rs  rate_limit.rs  server.rs  session.rs  validation.rs
src/auth/: basic.rs  token.rs
src/pty/: process.rs  session.rs
src/server/: api.rs  http.rs  websocket.rs
static/: index.html
