[package]
name = "ttyd-rs"
version = "0.2.1"
edition = "2024"
authors = ["wcx"]
description = "A Rust rewrite of ttyd - Share your terminal over the web"
license = "MIT"

[lints.clippy]
unwrap-used = "deny"
expect-used = "deny"
panic = "deny"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
futures = "0.3.32"
libc = "0.2.186"
mime_guess = "2.0.5"
nix = { version = "0.31.3", features = ["process", "signal", "term", "ioctl", "fs"] }
rust-embed = { version = "8.11.0", features = ["axum"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "full", "io-util"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.1.2"
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.3", features = ["v4"] }

[features]
default = []

[dev-dependencies]
tokio-tungstenite = "0.29.0"
